--- a/emacs.org
+++ b/emacs.org
@@ -4726,6 +4726,35 @@ Keybindings of note:
   (wttrin-default-cities '("Eugene" "Portland" "Sonoma" "Kapolei" "New Orleans"))
   (wttrin-language "en-US"))
 #+end_src
+** World Clock
+Because sometimes I work with people in more than one timezone.  ~M-x world-clock~ to the rescue.
+
+#+begin_src emacs-lisp :tangle lisp/init-utils.el
+(setq zoneinfo-style-world-list ; M-x shell RET timedatectl list-timezones or M-x dired RET /usr/share/zoneinfo
+      '(("America/Los_Angeles" "Los Angeles")
+        ("America/Denver" "Denver")
+        ("America/Chicago" "Chicago")
+        ("America/New_York" "New York")
+        ("Canada/Atlantic" "Canada/Atlantic")
+        ("UTC" "UTC")
+        ("Europe/London" "London")
+        ("Europe/Lisbon" "Lisbon")
+        ("Europe/Brussels" "Barcelona • Paris • Brussels • Berlin")
+        ("Europe/Athens" "Athens • Cairo • Kyiv")
+        ("Asia/Tel_Aviv" "Tel Aviv")
+        ("Asia/Kolkata" "Kolkata")
+        ("Asia/Shanghai" "Beijing • Shanghai")
+        ("Asia/Seoul" "Seoul")
+        ("Asia/Tokyo" "Tokyo")
+        ("Asia/Vladivostok" "Vladivostok")
+        ("Australia/Brisbane" "Brisbane")
+        ("Australia/Sydney" "Sydney")
+        ("Pacific/Auckland" "Auckland")
+        ("Pacific/Honolulu" "Honolulu")))
+(setq world-clock-list t
+      setq world-clock-buffer-name "*world-clock*"
+      world-clock-time-format "%R %Z (%z)  %A %d %B")
+#+end_src
 ** with-editor
 Try to make it easier to use =emacsclient= as the =$EDITOR= of child processes using [[https://github.com/magit/with-editor][with-editor]].
 
