fix typo in world-clock block

--- a/emacs.org
+++ b/emacs.org
@@ -4752,7 +4752,7 @@ Because sometimes I work with people in more than one timezone.  ~M-x world-cloc
         ("Pacific/Auckland" "Auckland")
         ("Pacific/Honolulu" "Honolulu")))
 (setq world-clock-list t
-      setq world-clock-buffer-name "*world-clock*"
+      world-clock-buffer-name "*world-clock*"
       world-clock-time-format "%R %Z (%z)  %A %d %B")
 #+end_src
 ** with-editor
