update music capture target

--- a/emacs.org
+++ b/emacs.org
@@ -3583,7 +3583,7 @@ Miscellaneous notes:
 
             ("r" "Reference")
             ("rm" "Music" entry
-             (file+olp+datetree "~/forge/journal.org")
+             (file+olp+datetree ,(expand-file-name (format-time-string "journal/%Y.org") org-directory))
              "* %(forge/capture-current-song) :music:\n%U\n")
             ("rr" "Reference" entry
              (file+olp+datetree "~/forge/articles.org")
