add sanityinc-tomorrow themes

--- a/emacs.org
+++ b/emacs.org
@@ -1071,6 +1071,9 @@ looks good.  It will also define a default theme to start with.
   (solarized-use-variable-pitch t)
   (solarized-scale-org-headlines t))
 
+;; https://github.com/purcell/color-theme-sanityinc-tomorrow
+(use-package color-theme-sanityinc-tomorrow)
+
 ;; https://github.com/ianpan870102/tron-legacy-emacs-theme
 (use-package tron-legacy-theme
   :custom
